tests/bad/syntax/063-case-10.clap
val x = 
  case { and _ => x }

